--- a/core/src/ext-app.properties
+++ b/core/src/ext-app.properties
@@ -18,7 +18,7 @@ cuba.viewsConfig=cuba-views.xml workflow-views.xml thesis-views.xml ext-views.xm
 
 cuba.ftsConfig=cuba-fts.xml thesis-fts.xml ext-fts.xml
 
-cuba.reporting.openoffice.path=/usr/lib/libreoffice/program/
+cuba.reporting.openoffice.path=C:/Program Files/OpenOffice.org 3/program/
 cuba.reporting.displayDeviceUnavailable = true
 
 cuba.automaticDatabaseUpdate=true
